Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-3885

Mariadb server crash

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.28
    • 5.5.28a
    • None
    • None
    • Linux, launchpad 5.5 tree, Debug build

    Description

      If the client tries to kill himself, the server crashes.

      How to repeat:

      #include <mysql.h>
      int main()
      {
        MYSQL *mysql;
       
        /* init, connect */
        ....
       
        mysql_kill(mysql, mysql_thread_id(mysql));
       
        ....
      }

      (gdb) bt full
      #0  0xffffe424 in __kernel_vsyscall ()
      No symbol table info available.
      #1  0xb7ad38df in raise () from /lib/libc.so.6
      No symbol table info available.
      #2  0xb7ad5220 in abort () from /lib/libc.so.6
      No symbol table info available.
      #3  0xb7acc144 in __assert_fail () from /lib/libc.so.6
      No symbol table info available.
      #4  0x081acfa6 in Protocol::end_statement (this=0x9f669e0) at /home/georg/work/mariadb/server/maria/5.5-gis/sql/protocol.cc:518
              _db_stack_frame_ = {func = 0x886c215 "dispatch_command", file = 0x886c06c "/home/georg/work/mariadb/server/maria/5.5-gis/sql/sql_parse.cc", level = 2147483651, prev = 0x9cda9218}
              __PRETTY_FUNCTION__ = "void Protocol::end_statement()"
              error = false
      #5  0x0823e6cf in dispatch_command (command=COM_PROCESS_KILL, thd=0x9f66580, packet=0x9f69b39 "\002", packet_length=4) at /home/georg/work/mariadb/server/maria/5.5-gis/sql/sql_parse.cc:1431
              net = 0x9f6676c
              __PRETTY_FUNCTION__ = "bool dispatch_command(enum_server_command, THD*, char*, uint)"
              __FUNCTION__ = "dispatch_command"
              error = false
              _db_stack_frame_ = {func = 0x886c168 "do_command", file = 0x886c06c "/home/georg/work/mariadb/server/maria/5.5-gis/sql/sql_parse.cc", level = 2147483650, prev = 0x9cda92ec}
      #6  0x0823cbb4 in do_command (thd=0x9f66580) at /home/georg/work/mariadb/server/maria/5.5-gis/sql/sql_parse.cc:794
              return_value = false
              packet = 0x9f69b38 "\f\002"
              packet_length = 5
              net = 0x9f6676c
              command = COM_PROCESS_KILL
              __PRETTY_FUNCTION__ = "bool do_command(THD*)"
              _db_stack_frame_ = {func = 0x89a5799 "?func", file = 0x89a579f "?file", level = 2147483649, prev = 0x0}
      #7  0x0832900e in do_handle_one_connection (thd_arg=0x9f66580) at /home/georg/work/mariadb/server/maria/5.5-gis/sql/sql_connect.cc:1253
              create_user = true
              thd = 0x9f66580
      #8  0x08328b59 in handle_one_connection (arg=0x9f66580) at /home/georg/work/mariadb/server/maria/5.5-gis/sql/sql_connect.cc:1168
              thd = 0x9f66580
      #9  0xb7fa8b05 in start_thread () from /lib/libpthread.so.0
      No symbol table info available.
      #10 0xb7b7bd5e in clone () from /lib/libc.so.6

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            georg Georg Richter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5h
                5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.